[gd_scene load_steps=13 format=3 uid="uid://bjv5ej0ykfexf"]

[ext_resource type="Script" path="res://code/Boss2.gd" id="1_scpuy"]
[ext_resource type="Texture2D" uid="uid://dsd1a5ua5nrsw" path="res://art/boss2.png" id="2_fg61k"]
[ext_resource type="PackedScene" uid="uid://cqlmw13hexw1a" path="res://scenes/state_machine/state_machine.tscn" id="3_vu8ju"]
[ext_resource type="Script" path="res://scenes/boss2/Transitions.gd" id="4_3ff4p"]
[ext_resource type="Script" path="res://scenes/boss2/Idle.gd" id="5_0qx1r"]
[ext_resource type="Script" path="res://code/util/DamageHurtbox.gd" id="5_cl21n"]
[ext_resource type="Script" path="res://scenes/boss2/Roam.gd" id="5_f267q"]
[ext_resource type="Script" path="res://code/util/DamageHitbox.gd" id="6_0mm0i"]
[ext_resource type="Script" path="res://scenes/boss2/Jump.gd" id="6_2goi7"]
[ext_resource type="Script" path="res://scenes/boss2/Fall.gd" id="7_c6cul"]
[ext_resource type="Script" path="res://scenes/boss2/Shooting.gd" id="8_ml6nu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j71wh"]
radius = 25.0
height = 80.0

[node name="Boss2" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_scpuy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_fg61k")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j71wh")

[node name="StateMachine" parent="." instance=ExtResource("3_vu8ju")]

[node name="Transitions" type="Node" parent="StateMachine"]
script = ExtResource("4_3ff4p")

[node name="States" type="Node" parent="StateMachine"]

[node name="Idle" type="Node" parent="StateMachine/States"]
script = ExtResource("5_0qx1r")

[node name="Roam" type="Node" parent="StateMachine/States"]
script = ExtResource("5_f267q")

[node name="Jump" type="Node" parent="StateMachine/States"]
script = ExtResource("6_2goi7")

[node name="Fall" type="Node" parent="StateMachine/States"]
script = ExtResource("7_c6cul")

[node name="Shooting" type="Node" parent="StateMachine/States"]
script = ExtResource("8_ml6nu")

[node name="DamageHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("5_cl21n")
i_seconds = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHurtbox"]
position = Vector2(1, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j71wh")

[node name="DamageHitbox" type="Area2D" parent="." groups=["enemy_attack"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("6_0mm0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2(1, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j71wh")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="damage_received" from="DamageHurtbox" to="." method="_on_damage_hurtbox_damage_received"]
